# low-latency-trading

./: .gitignore  CMakeLists.txt  lf_queue_example.cpp  logger.hpp  logger_example.cpp  mempool_example.cpp  socket_example.cpp  socket_utils.hpp  tcp_socket.cpp  thread_utils.hpp  time_utils.hpp
common/: CMakeLists.txt  lf_queue.hpp  logger.hpp  macros.hpp  mcast_socket.cpp  mcast_socket.hpp  mem_pool.hpp  socket_utils.hpp  tcp_server.cpp  tcp_server.hpp  tcp_socket.cpp  tcp_socket.hpp  types.hpp
common/examples/: lf_queue_example.cpp  logger_example.cpp  mempool_example.cpp  socket_example.cpp
exchange/: CMakeLists.txt  exchange_main.cpp
exchange/market_data/: market_data_publisher.hpp  market_update.hpp  snapshot_synthesizer.cpp  snapshot_synthesizer.hpp
exchange/matching_engine/: matching_engine.hpp  me_order.hpp  me_orderbook.cpp  me_orderbook.hpp
exchange/order_server/: client_request.hpp  client_response.hpp  fifo_sequencer.hpp  order_server.cpp  order_server.hpp
trading/market_data/: market_data_consumer.cpp  market_data_consumer.hpp
trading/order_gw/: order_gateway.cpp  order_gateway.hpp
trading/strategy/: market_order.hpp  market_orderbook.cpp  market_orderbook.hpp
